Разделила основной файл на несколько+ newcommand \define

--- a/preamble.tex
+++ b/preamble.tex
@@ -1,6 +1,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[english,russian]{babel}
 \usepackage{amsmath,amssymb,amsfonts}
+\usepackage{bookmark}
 \usepackage{geometry}
 \usepackage{graphicx}
 \usepackage{fancyhdr}
