--- a/main.tex
+++ b/main.tex
@@ -11,9 +11,9 @@
 \end{titlepage}
 \tableofcontents
 
-\input{mechanics.tex}
-\input{dynamics.tex}
-\input{molecule.tex}
-\input{electric.tex}
+\input{chapters/mechanics.tex}
+\input{chapters/dynamics.tex}
+\input{chapters/molecule.tex}
+\input{chapters/electric.tex}
 
 \end{document}
