--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,8 @@
 \documentclass[12pt,a4paper]{report}
 
+% Немного поднимает оглавление страниц (добавил потому что варнинг убирает)
+\setlength{\headheight}{14.49998pt}
+
 \input{preamble}
 
 \newcommand {\define}{--- \textbf{Определение:}}
