--- a/preamble.tex
+++ b/preamble.tex
@@ -5,6 +5,7 @@
 \usepackage{geometry}
 \usepackage{graphicx}
 \usepackage{fancyhdr}
+\usepackage{subfiles}
 \usepackage{tikz}
 \usepackage{pgf,tikz}
 \usetikzlibrary{arrows}
