--- a/main.tex
+++ b/main.tex
@@ -17,12 +17,12 @@
 \end{titlepage}
 \tableofcontents
 
-\input{chapters/mechanics.tex}
+\subfile{chapters/mechanics.tex}
 
-\input{chapters/dynamics.tex}
+\subfile{chapters/dynamics.tex}
 
-\input{chapters/molecule.tex}
+\subfile{chapters/molecule.tex}
 
-\input{chapters/electric.tex}
+\subfile{chapters/electric.tex}
 
 \end{document}
