коммит небольшие изменения

--- a/dynamics.tex
+++ b/dynamics.tex
@@ -886,7 +886,8 @@ $\vec N$ - главный момент внешних сил
 \[ \vec r_i = \vec r_i^{\prime} + \vec r_c\]
 
 Продифференцируем этот вектор по времени: $\vec v_i = \vec v_i^{\prime} + v_c$. Переходим к новой системе:
-% \[ L = \sum_{i = 1}^n [r_i, P_i] = \sum_{i = 1}^n [r_i^{\prime} + r_c, m_i(v_i^{\prime} + v_с)] \Rightarrow \] %TODO!: FIX GOVNO
+\[ L = \sum_{i = 1}^n [\mathbf{r}_i, \mathbf{P}_i] = \sum_{i = 1}^n [\mathbf{r}_i^{\prime} + \mathbf{r}_c, m_i(\mathbf{v}_i^{\prime} + \mathbf{v}_c)] \Rightarrow\]
+
 
 
 \[ \sum_{i = 1}^n [r_i^{\prime}, m_i \cdot v_i^{\prime}] + \sum_{i = 1}^n [r_i^{\prime}, m_i \cdot v_c] + \sum_{i = 1}^n [r_c, m_i \cdot v_i^{\prime}] + \sum_{i = 1}^n [r_c, m_i \cdot v_c]\]
