--- a/mechanics.tex
+++ b/mechanics.tex
@@ -576,7 +576,7 @@
                     \[ \lim_{\Delta \Theta \to 0}  \frac{\sin{\frac{\Delta \Theta}{2}}}{\frac{\Delta \Theta}{2}} \cdot \lim_{\Delta S \to 0} \frac{\Delta \Theta}{\Delta S} \cdot \lim_{\Delta t \to 0} \frac{\Delta S}{\Delta t} \]
                     Так как,
                     \[ \langle \lim_{\Delta \Theta \to 0}  \frac{\sin{\frac{\Delta \Theta}{2}}}{\frac{\Delta \Theta}{2}} \to 1 ; \lim_{\Delta S \to 0} \frac{\Delta \Theta}{\Delta S} \to k; \lim_{\Delta t \to 0} \frac{\Delta S}{\Delta t} \to v \rangle \]
-                    % \[ k \cdot v = \frac{v}{\rho} \text{\begin{flushright}(следует из \hyperref[eq:kriv]{(\ref{eq:kriv})} )\end{flushright}}\] %TODO!: Чёт не робит, фиксанём
+                    \[ k \cdot v = \frac{v}{\rho} \hfill \text{(следует из \hyperref[eq:kriv]{(\ref{eq:kriv})} )}\]
 
                     \vspace{5px}
 
@@ -665,14 +665,14 @@
     \item \textit{равнопеременное движение} $w - const; w = a$
           $\frac{dv}{dt} = a => v = a \cdot t + C $ где С находится из начального условия $v(0) = v_0$, то есть:
           \[ v = at+v_0\]
-          %   \[ x = \frac{at^2}{2} + v_0t+ C \text{\begin{flushright} , где С = $x_0 (x(0) = x_0)$ \end{flushright}}\] %TODO!: Фиксань формул.
+          \[ x = \frac{at^2}{2} + v_0t+ C \hfill \text{, где С = $x_0 (x(0) = x_0)$}\] 
 \end{enumerate}
 
 \vspace{10px}
 
 \textbf{Колебательное движение}
 
-% \[ x = A \cdot \sin{(\omega t+ \phi_0)} \text{,где \begin{flushright} $\phi_0$ - начальная фаза\end{flushright}}\] %TODO!: Фикс фикса
+\[ x = A \cdot \sin{(\omega t+ \phi_0)} \hfill \text{,где $\phi_0$ - начальная фаза}\]
 \[ v = A \cdot \cos{(\omega t+ \phi_0)}\]
 \[ W = -A\omega ^2 \cdot \sin{(\omega t+\phi_0)} = -\omega^2x \]
 \textit{Если знаки $v(t) , W(t)$ совпадают, то движение ускоренное, если нет - замедленное.}
