--- a/preamble.tex
+++ b/preamble.tex
@@ -24,7 +24,6 @@
 }
 
 \usepackage{indentfirst} % Отступ для первого абзаца
-
 \usepackage{titlesec}
 \titleformat{\section}{\Large\bfseries}{\thesection}{1em}{}
 \titleformat{\subsection}{\large\bfseries}{\thesubsection}{1em}{}
@@ -32,7 +31,7 @@
 
 \setcounter{secnumdepth}{4}
 \setcounter{tocdepth}{2}
-
+\newcommand {\define}{--- \textbf{Определение:}}
 
 \renewcommand{\thechapter}{\Roman{chapter}}
 \renewcommand{\thesection}{\arabic{section}}
