--- a/preamble.tex
+++ b/preamble.tex
@@ -10,6 +10,8 @@
 \usepackage{tikz}
 \usepackage{pgf,tikz}
 \usepackage{esint}
+\usepackage{mathrsfs}
+
 \usetikzlibrary{arrows}
 \geometry{a4paper, margin=1in}
 \usepackage{hyperref}
