--- a/preamble.tex
+++ b/preamble.tex
@@ -1,3 +1,4 @@
+\usepackage[backend=biber,style=numeric]{biblatex}
 \usepackage[english,russian]{babel}
 \usepackage[T2A]{fontenc}
 \usepackage[utf8]{inputenc}
@@ -62,3 +63,5 @@
 \newtheorem{proposition}{Утверждение}
 \newtheorem{corollary}{Следствие}[theorem]
 \newtheorem{lemma}{Лемма}
+
+\nocite{*}
