--- a/preamble.tex
+++ b/preamble.tex
@@ -12,6 +12,7 @@
 \usepackage{pgf,tikz}
 \usepackage{esint}
 \usepackage{mathrsfs}
+\usepackage{xcolor}
 
 \usetikzlibrary{arrows}
 \geometry{a4paper, margin=1in}
